--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -6,9 +6,12 @@
             @@include("header.html")
 
             <main class="main">
-
+                <h1 class="animated">Heading with animation</h1>
+                <h1 class="animated">Heading with animation</h1>
+                <h1 class="animated">Heading with animation</h1>
+                <h1 class="animated">Heading with animation</h1>
+                <h1 class="animated">Heading with animation</h1>
             </main>
-
             @@include("footer.html")
         </div>
         @@include("scripts.html")
