--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -7,10 +7,10 @@
 
             <main class="main">
                 <h1 class="animated">Heading with animation</h1>
-                <h1 class="animated">Heading with animation</h1>
-                <h1 class="animated">Heading with animation</h1>
-                <h1 class="animated">Heading with animation</h1>
-                <h1 class="animated">Heading with animation</h1>
+                <h1 class="animated">Another heading</h1>
+                <h1 class="animated">Short</h1>
+                <h1 class="animated">One more</h1>
+                <h1 class="animated">And last longest heading</h1>
             </main>
             @@include("footer.html")
         </div>
