added correct offset

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include("head.html", {"title": "Index"})
+@@include("head.html", {"title": "Training"})
 
 <body class="home">
 <div class="wrapper">
 
 	<main class="main home">
+
+
 		<h2 class="animated">some-text</h2>
 		<h2 class="animated">some-text</h2>
 		<h2 class="animated">some-text</h2>
